syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "Protos/common.proto";
import "Protos/PageType/pageType.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.Pages";

message Page {
    int32 id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp modificationDate = 3;
    int32 creationUserId = 4;
    int32 modificationUserId = 5;
    string treePath = 15;
    string treeOrder = 16;
    PageType type = 6;
    string name = 7;
    string shortName = 8;
    int32 parentId = 9;
    string header = 10;
    string body = 11;
    string metaTitle = 12;
    string metaKeywords = 13;
    string metaDescription = 14;
    int32 imageId = 17;
    string preview = 18;
    int32 commentContainerId = 19;
}

message PagePageModel {
    repeated Page pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}